test: 로또 번호 오름차순 정렬 테스트 수정